목록관련코드 수정중

--- a/2_목록관련태그_250620.html
+++ b/2_목록관련태그_250620.html
@@ -1,12 +1,14 @@
 <!--
-2_목록관련태그
+1_글자관련태그
 
 1수업시간 작성 20250620
 2책코드 추가 20250626
-3코드 정리 (미완) 20250626
+3코드 수정중 20250627
 
 
-
+참고
+kd 수업
+HTML+CSS+자바스크립트 웹 표준의 정석
 
 JeongHoon 20250620 
 -->
