--- a/2_목록관련태그_250620.html
+++ b/2_목록관련태그_250620.html
@@ -1,9 +1,10 @@
 <!--
-1_글자관련태그
+2_목록관련태그
 
 1수업시간 작성 20250620
 2책코드 추가 20250626
-3코드 수정중 20250627
+3코드 정리 20250626
+4코드 정리 20250627
 
 
 참고
@@ -22,23 +23,83 @@ JeongHoon 20250620
 <body>
     <h1>목록관련태그</h1>
         <h2>ol tag , ordered list : 순서 있는 목록</h2>
+        <!--순서 있는 목록-->
         <ol>
             <li>list1</li>
             <li>list2</li>
             <li>list3</li>
-        </ol><hr>
+        </ol>
+                                            <br><hr><br>
         <h2>ul tag , unordered list : 순서 없는 목록</h2>
+        <!--순서 없는 목록-->
         <ul>
             <li>list1</li>
             <li>list2</li>
             <li>list3</li>
-        </ul><hr>
+        </ul>
+                                            <br><hr><br>
         <h2>dl tag , description list : 설명 목록</h2>
+        <!--설명 목록-->
             <dt>이곳은 목록의 제목을 적는 곳</dt>
-            <dd>이곳은 목록의 설명을 적는 곳</dd>
-            <dd>또 다른줄을 작성 </dd>
+                <dd>이곳은 목록의 설명을 적는 곳</dd>
+                <dd>또 다른줄을 작성 </dd>
             <dt>다른 제목을 적어 새로운 목록을 만듬</dt>
-            <br><hr>
-
+                <dd>이곳은 목록의 설명을 적는 곳</dd>
+                <dd>또 다른줄을 작성 </dd>
+                                            <br><hr><br>
+        <!-- 영문 소문자로 표기-->
+        <h3> 영문 소문자로 표기</h3>
+        <ol type="a">
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>react</li>
+        </ol>
+                                            <br><hr><br>
+         <!-- 영문 대문자로 표기-->
+        <h3> 영문 대문자로 표기</h3>
+        <ol type="A">
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>react</li>
+        </ol>
+                                            <br><hr><br>
+        <!-- 로마 소문자로 표기-->
+        <h3> 로마 소문자로 표기</h3>
+        <ol type="i">
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>react</li>
+        </ol>
+                                            <br><hr><br>
+        <!-- 로마 대문자로 표기-->
+        <h3> 로마 대문자로 표기</h3>
+        <ol type="I">
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>react</li>
+        </ol>
+                                            <br><hr><br>
+        <!-- 시작값 변경하여 표기-->
+        <h3> 시작값 변경하여 표기</h3>
+        <ol type="1" start="5">
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>react</li>
+        </ol>
+                                            <br><hr><br>
+        <!-- 역순 표기-->
+        <h3> 역순 표기</h3>
+        <ol reversed="reversed">
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>react</li>
+        </ol>
+                                            <br><hr><br>
 </body>
 </html>
