--- a/7_하이퍼링크관련태그_250623.html
+++ b/7_하이퍼링크관련태그_250623.html
@@ -1,15 +1,22 @@
 <!--
-2_목록관련태그
+7_하이퍼링크관련태그
 
-1수업시간 작성 20250623
-2
-3
+1 수업시간 작성 20250623
+2 책 코드 추가 20250627
+3 코드 테스트 20250628
+4 수정필요 , 테스트필요, 이해필요 
+5
+6
 
 
 
+참고
+kd 수업
+HTML+CSS+자바스크립트 웹 표준의 정석
 
-JeongHoon 2025063
---><!DOCTYPE html>
+JeongHoon 20250623
+-->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
