--- a/5_이미지관련태그_250623.html
+++ b/5_이미지관련태그_250623.html
@@ -1,12 +1,15 @@
 <!--
 5_이미지관련태그
 
-1수업시간 작성 20250623
-2책 코드 추가 20250627
-3소스 정리 20250628
-4주석, 설정 다시 정리 20250628
-5가변,고정 크기에 대한 설명 잘 나와있음 
-6.수정필요 20250628
+1. 수업시간 작성 20250623
+2. 책 코드 추가 20250627
+3. 소스 정리 20250628
+4. 주석, 설정 다시 정리 20250628
+5. 가변,고정 크기에 대한 설명 잘 나와있음 ->코드분리 -> 20250629
+6. 수정필요 20250628
+7. 책코드 추가 figure, figcaption tag 250629
+8. 책코드 추가 srcset tag 250629
+9. w 서술자 ,x서술자 추가 했으나 테스트못함 250629
 
 
 참고
@@ -38,9 +41,15 @@ JeongHoon 20250623
             가능 이미지 파일 형식
             GIF, JPG, JPEG, PNG, WebP
 
-            <figure> 태그
-            <figcaption>태그
-            <srcset>태그
+            <figure> 태그       본문과 다른 이미지등 을 추가할때 사용
+            <figcaption>태그    figure에 제목
+            <srcset>태그        모니터가 모두 다르므로 맞는 해상도에 맞게 사진을 바꾸기 위해 사용, 
+
+            w서술자 파일이름 너비 형식으로 이미지를 삽입
+                large.png 1000w
+            x서술사 
+                x는 장치의 필셀 비율, 
+                    "sky-1.png 1x,sky2-png 2x"
     -->
 </head>
 <body>
@@ -112,5 +121,42 @@ JeongHoon 20250623
                 <img src="sample/image/flower5.PNG" width="15%" height="150px">
 
             <br><hr><br>
+
+            <h3>웹요소에 설명 글 붙이기 </h3>
+            <!--
+                <figure> : 도표,일러스느, 이미지, 소스코드 등 독립된 콘텐츠
+                    문서의 내용과 구별됨
+                    figure안에 여러이미지 가능
+                <figcaption> 넣은 이미지의 제목
+                
+            -->
+            <figure><!--문서의 내용과 구별되는 figure태그안의 이미지-->
+                <img src="sample/image/forest1.PNG" alt="숲1">
+            </figure>
+            <figure><!--figure1-->
+                <img src="sample/image/river1.PNG" alt="강1">
+                <figurecaption> 강1</figurecaption><!--figure1 설명-->
+            </figure>
+            <figure><!--figure2-->
+               <img src="sample/image/river2.PNG" alt="강2">
+                <figurecaption> 강2</figurecaption><!--figure2 설명-->
+            </figure>
+            <figure><!--figure3 이렇게 figure안의 여러이미지에 설명을 붙일 수 있음-->
+               <img src="sample/image/flower1.PNG" alt="꽃1">
+               <img src="sample/image/flower2.PNG" alt="꽃2">
+               <img src="sample/image/flower3.PNG" alt="꽃3">
+               <img src="sample/image/flower4.PNG" alt="꽃4">
+               <img src="sample/image/flower5.PNG" alt="꽃5">
+                <figurecaption> 꽃</figurecaption><!--figure3 설명-->
+            </figure>
+            <br><hr><br>
+            <h3>srcset 속성 사용해보기</h3>
+            <!--
+                    srcset  한꺼번에 이미지 정보를 여러개 알려주고 화면 너비,
+                     해상도에 따라 이미지를 적절하게 표시하는것
+
+                     같은 이미지를 모니터에 따라서 다르게 표현하기 위해 사용하는것같다, 
+            -->
+            <img src="sample/image/strawberry.png" srcset="sample/image/flower1.png 700w, sample/image/flower2.png 1000w" alt ="하늘위로" >
 </body>
 </html>
