수정완료, -오디오,비디오 설정 추가
1수업시간 작성 20250623
2책 코드 추가 20250628
3코드 테스트, 성공 20250628
4 수정중 20250628
5 수정중 20250629
6 수정 완료 20250630
7

--- a/6_미디어관련태그_250623.html
+++ b/6_미디어관련태그_250623.html
@@ -5,8 +5,9 @@
 2책 코드 추가 20250628
 3코드 테스트, 성공 20250628
 4 수정중 20250628
-5
-6
+5 수정중 20250629
+6 수정 완료 20250630
+7   
 
 
 참고
@@ -67,7 +68,27 @@ JeongHoon 20250623
             ></video>
 
         <br><hr><br>
+        <h3>오디오, 비디오 태그의 속성</h3>
+        <br>
+            <!--
+            <audio src="sample/audio/major.mp3"></audio>
 
+            controls    플레이어 화면에 컨트롤 바를 표시
+            autoplay    자동실행 ->자동재생 안되도록 하는게 좋다. 
+            loop        반복실행
+            meted       무음
+            preload     파일을 어떻게 로딩할것인지 종류는 auto met
+            width
+            height
+            poster="파일이름" video tags 에서 사용하는 속성으로 비ㅣㄷ오가 재생되기전까지 화면에 표시될 포스터의 이미지를 저장
+
+            샘플이미지 
+            poster="sample/dfd.img"
+            -->
+            <audio src="sample/audio/major.mp3" controls="controls" loop="loop">
+            </audio>
+            <video src="sample/video/video1.mp4" controls="controls" poster="sample/image/flower3.PNG"
+            ></video><!--샘플 이미ㅣ지 -->
 
 
 
